Bug 161775 - Redacting small letter text misplaces the grey box
Summary: Redacting small letter text misplaces the grey box
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0
Keywords: implementationError
Depends on:
Blocks: Redaction
  Show dependency treegraph
 
Reported: 2024-06-25 09:55 UTC by Gabor Kelemen (Collabora)
Modified: 2024-11-13 23:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (9.39 KB, application/vnd.oasis.opendocument.text)
2024-06-25 09:55 UTC, Gabor Kelemen (Collabora)
Details
The issue in Draw (185.50 KB, image/png)
2024-06-25 09:57 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-06-25 09:55:43 UTC
Created attachment 194944 [details]
Example file from Writer

If a word written in smaller font than the surrounding texts size is auto-redacted, the grey box is aligned too close to the top of the word below (instead of the redacted words baseline), leaving the top of the redacted word somewhat exposed.

1. Open attached file 
2. Go to Tools - Autoredact
3. Add a new target to the word Durchgang
4. Press OK in the Autoredact dialog
->The redacted file opens in Draw, observe the grey block around the first Durchgang word.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d7aeaeafc32f78ca38942868f965bae0e6c376b1
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

This became visible after the fix of bug 127169, but even before that the grey block was placed too low.
Comment 1 Gabor Kelemen (Collabora) 2024-06-25 09:57:35 UTC
Created attachment 194945 [details]
The issue in Draw
Comment 2 J_A 2024-06-25 10:34:25 UTC
Hello Gabor Kelemen,

Thank you for reporting the bug. I can confirm that the bug is present in the master version.

Tested using:
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 stragu 2024-07-10 11:56:16 UTC
Reproduced in:

Version: 24.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 1b61abc4451d38984338b750d85770ec9871060a
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Same in 6.4.0.3, when auto-redact was added, so assumed implementation error.
Comment 4 Commit Notification 2024-11-12 20:40:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7368c95b6fe90aeb4f06c1eee15be770beda382

tdf#161775 vcl: WMF export: remove special case of Dx in EXTTEXTOUT

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-11-12 20:40:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/58948dd22464c38b2a042022f4d549ca926f0476

tdf#161775 sfx2: SfxRedactionHelper: actually use font for layout

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2024-11-12 21:16:27 UTC
fixed on master
Comment 7 stragu 2024-11-13 23:27:29 UTC
Fix verified in own build:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9d1bedcd6791463c6c8ae737d912cee505dd5699
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Thanks Michael!