vcl/source/filter/wmf/emfwr.cxx
@@ -899,10 +899,8 @@ void EMFWriter::ImplWriteTextRecord( const Point& rPos, const OUString& rText, c
 
     if( nLen > 1 )
     {
-        for( i = 1; i < ( nLen - 1 ); i++ )
+        for (i = 1; i < nLen; i++)
             ImplWriteExtent( pDX[ i ] - pDX[ i - 1 ] );
-
-        ImplWriteExtent( pDX[ nLen - 2 ] / ( nLen - 1 ) );
     }
 
     ImplEndRecord();
